SDK/SDK_Export_2/.metadata/.plugins/org.eclipse.cdt.ui/Moore_Voting.build.log
14:51:50 **** Auto Build of configuration Release for project Moore_Voting ****
make all 
'Building file: ../src/helloworld.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O2 -c -fmessage-length=0 -I../../Moore_Voting_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.d" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:106:25: error: 'XPAR_AXI_BRAM_CTRL_2_S_AXI_BASEADDR' undeclared (first use in this function)
     data_addr = (u32 *) XPAR_AXI_BRAM_CTRL_2_S_AXI_BASEADDR;
                         ^
../src/helloworld.c:106:25: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:107:25: error: 'XPAR_AXI_BRAM_CTRL_3_S_AXI_BASEADDR' undeclared (first use in this function)
     inst_addr = (u32 *) XPAR_AXI_BRAM_CTRL_3_S_AXI_BASEADDR;
                         ^
make: *** [src/helloworld.o] Error 1

14:51:50 Build Finished (took 574ms)

